--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,14 @@
   --font-inter: var(--font-inter);
 }
 
+.font-poppins {
+  font-family: var(--font-poppins), sans-serif !important;
+}
+
+.font-inter {
+  font-family: var(--font-inter), sans-serif;
+}
+
 html,
 body {
   background: var(--background);
